<resources>
    <string name="app_name" translatable="false">Stock Hawk</string>

    <string name="action_settings" translatable="true">Settings</string>
    <string name="action_change_units" translatable="true">Change Units</string>

    <string name="symbol_search" translatable="true">Symbol Search</string>
    <string name="content_test" translatable="true">Search for a Stock Symbol</string>
    <string name="input_hint" translatable="false">FB</string>
    <string name="input_prefill" translatable="false"></string>
    <string name="network_toast" translatable="true">Uh-oh! This app requires an internet connection.</string>
    <string name="invalid_stock_preexisting" translatable="true">This stock is already saved!</string>
    <string name="invalid_stock" translatable="true">Cannot add invalid stock</string>
    <string name="stocks_updated_text" translatable="true">"Updated "</string>
    <string name="stocks_empty_text" translatable="true">No stocks</string>
    <string name="stock_item_content" translatable="true">" stock at "</string>

    <string name="detail_stock_news_query" translatable="true">" stock news"</string>
    <string name="close_price_label_graph" translatable="true">Close price</string>
    <string name="graph_info_not_available" translatable="true">N/A</string>
    <string name="percent_change_error" translatable="true">-0.00%</string>
    <string name="not_percent_change_error" translatable="true">-0.00</string>
    <string name="detail_1d_selection" translatable="true">1d</string>
    <string name="detail_1d_selection_content" translatable="true">Select one day.</string>
    <string name="detail_5d_selection" translatable="true">5d</string>
    <string name="detail_5d_selection_content" translatable="true">Select five days.</string>
    <string name="detail_1m_selection" translatable="true">1m</string>
    <string name="detail_1m_selection_content" translatable="true">Select one month.</string>
    <string name="detail_1yr_selection" translatable="true">1yr</string>
    <string name="detail_1yr_selection_content" translatable="true">Select one year.</string>
    <string name="detail_symbol_content" translatable="true">Get stock news.</string>
    <string name="detail_graph_content" translatable="true">Interact with stock graph.</string>
    <string name="detail_open_title" translatable="true">Open</string>
    <string name="detail_high_title" translatable="true">High</string>
    <string name="detail_low_title" translatable="true">Low</string>
    <string name="detail_mkt_cap_title" translatable="true">Mkt cap</string>
    <string name="detail_pe_ratio_title" translatable="true">P/E ratio</string>
    <string name="detail_div_yield_title" translatable="true">Div yield</string>
    <string name="update_time_format_default_locale" translatable="true">E dd, hh:mm a</string>
    <string name="fab_content" translatable="true">Add stock</string>
    <string name="change_units_content" translatable="true">Change Units</string>
    <string name="select_stock_content" translatable="true">" Select Stock "</string>
    <string name="open_stock_hawk_app_content" translatable="true">Open Stock Hawk App</string>

</resources>
